tempfile/impl-trait-for-tuples/tests/ui/calling_method_in_static_function.stderr
error: Can not call non-static method from within a static method.
  --> $DIR/calling_method_in_static_function.rs:12:27
   |
12 |         for_tuples!( ( #( Tuple.test() ),* ) )
   |                           ^^^^^
